<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, GeoTabletActivity!</string>
    <string name="app_name">handiPorsman</string>
    <string name="button_name">Afficher la carte</string>
    <string name="help">Aide</string>
    <string name="map">Retour à la carte</string>
    
    <string-array name="map_choice">
        <item>Porsman</item>
        <item>Plouarzel</item>
        <item>Moulin blanc</item>
        <item>Bretagne</item>
        <item>Trezien</item>
    </string-array>
    <string-array name="mode">
        <item>2 Doigts</item>
<!--         <item>Super Doigt</item> -->
<!--         <item>N Doigts</item> -->
    </string-array>
    <string-array name="zoom_level">
<!--         <item>2</item> -->
<!--         <item>3</item> -->
<!--         <item>4</item> -->
<!--         <item>5</item> -->
<!--         <item>6</item> -->
<!--         <item>7</item> -->
<!--         <item>8</item> -->
<!--         <item>9</item> -->
<!--         <item>10</item> -->
<!--         <item>11</item> -->
<!--         <item>12</item> -->
<!--         <item>13</item> -->
<!--         <item>14</item> -->
<!--         <item>15</item> -->
<!--         <item>16</item> -->
<!--         <item>17</item> -->
        <item>18</item>
    </string-array>

    <string name="Affiche_carte">Afficher carte</string>
    <string name="zone">Choisir une zone</string>
    <string name="echelle">Echellle</string>
    <string name="mode">Mode</string>
    <string name="filtre">filtre</string>

</resources>